--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,51 +1,70 @@
 # 2024-03-18
 
-共 108 条
+共 125 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 08:26:31 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 18 2024 09:38:34 GMT+0800 (China Standard Time) -->
 1. [普京当选俄总统](https://so.toutiao.com/search?keyword=普京当选俄总统)
-1. [网传邯郸初中生遇害案颅骨照片不实](https://so.toutiao.com/search?keyword=网传邯郸初中生遇害案颅骨照片不实)
+1. [13岁男生猥亵女生被送专门学校训诫](https://so.toutiao.com/search?keyword=13岁男生猥亵女生被送专门学校训诫)
 1. [穿越花海奔赴一场春天的约会](https://so.toutiao.com/search?keyword=穿越花海奔赴一场春天的约会)
 1. [普京称将在新任期继续推动国家发展](https://so.toutiao.com/search?keyword=普京称将在新任期继续推动国家发展)
-1. [13岁男生猥亵女生被送专门学校训诫](https://so.toutiao.com/search?keyword=13岁男生猥亵女生被送专门学校训诫)
 1. [凯特王妃去向不明 各方回应引猜测](https://so.toutiao.com/search?keyword=凯特王妃去向不明+各方回应引猜测)
+1. [小伙供女友读研 婚前查出白血病](https://so.toutiao.com/search?keyword=小伙供女友读研+婚前查出白血病)
+1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
 1. [多家厂商否认淀粉肠使用骨泥](https://so.toutiao.com/search?keyword=多家厂商否认淀粉肠使用骨泥)
-1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
-1. [国内油价调整大概率搁浅](https://so.toutiao.com/search?keyword=国内油价调整大概率搁浅)
-1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
-1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
-1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
-1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
-1. [特朗普：我败选对美来说是大屠杀](https://so.toutiao.com/search?keyword=特朗普：我败选对美来说是大屠杀)
-1. [联合国批俄在乌东等地举行大选投票](https://so.toutiao.com/search?keyword=联合国批俄在乌东等地举行大选投票)
-1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
-1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
 1. [媒体：樊振东看演唱会有何不可](https://so.toutiao.com/search?keyword=媒体：樊振东看演唱会有何不可)
-1. [4男女混租3个月后留满屋垃圾](https://so.toutiao.com/search?keyword=4男女混租3个月后留满屋垃圾)
-1. [央媒评淀粉肠塌房](https://so.toutiao.com/search?keyword=央媒评淀粉肠塌房)
-1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
-1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
-1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
-1. [内蒙古一公安局副局长因公牺牲](https://so.toutiao.com/search?keyword=内蒙古一公安局副局长因公牺牲)
-1. [用劣质槽头肉企业负责人道歉](https://so.toutiao.com/search?keyword=用劣质槽头肉企业负责人道歉)
+1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
+1. [初中生杀人案家长学校承担什么责任](https://so.toutiao.com/search?keyword=初中生杀人案家长学校承担什么责任)
+1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
+1. [女子加盟奶茶店半年亏60多万](https://so.toutiao.com/search?keyword=女子加盟奶茶店半年亏60多万)
 1. [男子获理赔后又将病死牛挖出来卖](https://so.toutiao.com/search?keyword=男子获理赔后又将病死牛挖出来卖)
-1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
-1. [货车超载500%以上 蛇形走位后侧翻](https://so.toutiao.com/search?keyword=货车超载500%以上+蛇形走位后侧翻)
+1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
+1. [辽宁省军区原司令员向经源逝世](https://so.toutiao.com/search?keyword=辽宁省军区原司令员向经源逝世)
+1. [俄总统普京感谢选民支持](https://so.toutiao.com/search?keyword=俄总统普京感谢选民支持)
+1. [315后山姆和Costco生意会更好吗](https://so.toutiao.com/search?keyword=315后山姆和Costco生意会更好吗)
+1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
+1. [布伦森谈欧文绝杀：这球也太难了吧](https://so.toutiao.com/search?keyword=布伦森谈欧文绝杀：这球也太难了吧)
+1. [三岁半孙子每天给开公交的爷爷送饭](https://so.toutiao.com/search?keyword=三岁半孙子每天给开公交的爷爷送饭)
+1. [百度副总裁：我们比华为智驾领先](https://so.toutiao.com/search?keyword=百度副总裁：我们比华为智驾领先)
+1. [利拉德31分 雄鹿主场战胜太阳](https://so.toutiao.com/search?keyword=利拉德31分+雄鹿主场战胜太阳)
+1. [联合国批俄在乌东等地举行大选投票](https://so.toutiao.com/search?keyword=联合国批俄在乌东等地举行大选投票)
+1. [特朗普：我败选对美来说是大屠杀](https://so.toutiao.com/search?keyword=特朗普：我败选对美来说是大屠杀)
+1. [国内油价调整大概率搁浅](https://so.toutiao.com/search?keyword=国内油价调整大概率搁浅)
+1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
+1. [2024全国室内田径大奖赛南京站收官](https://so.toutiao.com/search?keyword=2024全国室内田径大奖赛南京站收官)
+1. [辛吉飞去看市场里的梅菜扣肉](https://so.toutiao.com/search?keyword=辛吉飞去看市场里的梅菜扣肉)
+1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
+1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
+1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
 1. [特朗普：乌克兰必须是一个小骰子](https://so.toutiao.com/search?keyword=特朗普：乌克兰必须是一个小骰子)
-1. [淀粉肠摊主称周围同行只剩一两家](https://so.toutiao.com/search?keyword=淀粉肠摊主称周围同行只剩一两家)
+1. [毛不易在《我们仨》快碎了](https://so.toutiao.com/search?keyword=毛不易在《我们仨》快碎了)
 1. [法媒：马克龙为何从鸽派变为鹰派](https://so.toutiao.com/search?keyword=法媒：马克龙为何从鸽派变为鹰派)
+1. [央媒评淀粉肠塌房](https://so.toutiao.com/search?keyword=央媒评淀粉肠塌房)
+1. [伊万科维奇发现国足弊病](https://so.toutiao.com/search?keyword=伊万科维奇发现国足弊病)
+1. [货车超载500%以上 蛇形走位后侧翻](https://so.toutiao.com/search?keyword=货车超载500%以上+蛇形走位后侧翻)
+1. [淀粉肠摊主称周围同行只剩一两家](https://so.toutiao.com/search?keyword=淀粉肠摊主称周围同行只剩一两家)
+1. [雅江山火威胁加油站 消防连夜增湿](https://so.toutiao.com/search?keyword=雅江山火威胁加油站+消防连夜增湿)
+1. [阿玛德将在客战布伦特福德时停赛](https://so.toutiao.com/search?keyword=阿玛德将在客战布伦特福德时停赛)
+1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
 1. [撒贝宁带龙凤胎出行](https://so.toutiao.com/search?keyword=撒贝宁带龙凤胎出行)
-1. [315后阜阳市委市政府连夜开专题会](https://so.toutiao.com/search?keyword=315后阜阳市委市政府连夜开专题会)
+1. [俄防长要求黑海舰队加强保护](https://so.toutiao.com/search?keyword=俄防长要求黑海舰队加强保护)
+1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
+1. [为何南方城市对人才更有吸引力](https://so.toutiao.com/search?keyword=为何南方城市对人才更有吸引力)
 1. [新冠感染与认知功能下降存在相关性](https://so.toutiao.com/search?keyword=新冠感染与认知功能下降存在相关性)
+1. [内蒙古一公安局副局长因公牺牲](https://so.toutiao.com/search?keyword=内蒙古一公安局副局长因公牺牲)
+1. [男子网购彩票中千万大奖案一审宣判](https://so.toutiao.com/search?keyword=男子网购彩票中千万大奖案一审宣判)
+1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
+1. [网传邯郸初中生遇害案颅骨照片不实](https://so.toutiao.com/search?keyword=网传邯郸初中生遇害案颅骨照片不实)
+1. [4男女混租3个月后留满屋垃圾](https://so.toutiao.com/search?keyword=4男女混租3个月后留满屋垃圾)
+1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
+1. [用劣质槽头肉企业负责人道歉](https://so.toutiao.com/search?keyword=用劣质槽头肉企业负责人道歉)
+1. [315后阜阳市委市政府连夜开专题会](https://so.toutiao.com/search?keyword=315后阜阳市委市政府连夜开专题会)
 1. [专家：贵州“金字塔”是自然形成](https://so.toutiao.com/search?keyword=专家：贵州“金字塔”是自然形成)
 1. [今年高校毕业生将超1170万人](https://so.toutiao.com/search?keyword=今年高校毕业生将超1170万人)
 1. [台退将谈美国特种部队常驻台湾传闻](https://so.toutiao.com/search?keyword=台退将谈美国特种部队常驻台湾传闻)
 1. [修图风波后威廉王子首谈凯特王妃](https://so.toutiao.com/search?keyword=修图风波后威廉王子首谈凯特王妃)
 1. [男子景区写日本国歌4字引游客怒斥](https://so.toutiao.com/search?keyword=男子景区写日本国歌4字引游客怒斥)
-1. [男子网购彩票中千万大奖案一审宣判](https://so.toutiao.com/search?keyword=男子网购彩票中千万大奖案一审宣判)
 1. [王曼昱夺WTT新加坡大满贯女单冠军](https://so.toutiao.com/search?keyword=王曼昱夺WTT新加坡大满贯女单冠军)
-1. [布伦森谈欧文绝杀：这球也太难了吧](https://so.toutiao.com/search?keyword=布伦森谈欧文绝杀：这球也太难了吧)
 1. [欧文压哨绝杀 独行侠主场险胜掘金](https://so.toutiao.com/search?keyword=欧文压哨绝杀+独行侠主场险胜掘金)
 1. [女孩一把将小男孩从高处推下](https://so.toutiao.com/search?keyword=女孩一把将小男孩从高处推下)
 1. [华为纯血鸿蒙将于四季度向用户发布](https://so.toutiao.com/search?keyword=华为纯血鸿蒙将于四季度向用户发布)
@@ -60,7 +79,6 @@
 1. [前联合国官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=前联合国官员称从小被教育要憎恨中国)
 1. [被害男生父亲怀疑杀人埋尸有帮凶](https://so.toutiao.com/search?keyword=被害男生父亲怀疑杀人埋尸有帮凶)
 1. [官方通报初中生被同学杀害：将惩处](https://so.toutiao.com/search?keyword=官方通报初中生被同学杀害：将惩处)
-1. [三岁半孙子每天给开公交的爷爷送饭](https://so.toutiao.com/search?keyword=三岁半孙子每天给开公交的爷爷送饭)
 1. [遇害男孩家属：孩子经常要钱才上学](https://so.toutiao.com/search?keyword=遇害男孩家属：孩子经常要钱才上学)
 1. [美国男子水下生活百天生理年龄减少](https://so.toutiao.com/search?keyword=美国男子水下生活百天生理年龄减少)
 1. [邯郸村民试挖坑：6小时只能挖1米深](https://so.toutiao.com/search?keyword=邯郸村民试挖坑：6小时只能挖1米深)
@@ -90,7 +108,6 @@
 1. [台名嘴：民进党当局是纸老虎](https://so.toutiao.com/search?keyword=台名嘴：民进党当局是纸老虎)
 1. [密友：凯特对于网络的猜测感到震惊](https://so.toutiao.com/search?keyword=密友：凯特对于网络的猜测感到震惊)
 1. [WCBA全明星韩旭上演扣篮](https://so.toutiao.com/search?keyword=WCBA全明星韩旭上演扣篮)
-1. [辛吉飞去看市场里的梅菜扣肉](https://so.toutiao.com/search?keyword=辛吉飞去看市场里的梅菜扣肉)
 1. [曝梅根“十分担心”凯特](https://so.toutiao.com/search?keyword=曝梅根“十分担心”凯特)
 1. [28岁女孩回应徒步西藏“苍老30岁”](https://so.toutiao.com/search?keyword=28岁女孩回应徒步西藏“苍老30岁”)
 1. [28岁徒步西藏女孩明年打算徒步出国](https://so.toutiao.com/search?keyword=28岁徒步西藏女孩明年打算徒步出国)
