--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,58 +1,70 @@
 # 2024-03-18
 
-共 135 条
+共 144 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 10:12:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 18 2024 11:00:37 GMT+0800 (China Standard Time) -->
 1. [普京当选俄总统](https://so.toutiao.com/search?keyword=普京当选俄总统)
 1. [13岁男生猥亵女生被送专门学校训诫](https://so.toutiao.com/search?keyword=13岁男生猥亵女生被送专门学校训诫)
-1. [穿越花海奔赴一场春天的约会](https://so.toutiao.com/search?keyword=穿越花海奔赴一场春天的约会)
+1. [春分将至农事忙](https://so.toutiao.com/search?keyword=春分将至农事忙)
 1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
-1. [邯郸遇害初中生已于18日凌晨尸检](https://so.toutiao.com/search?keyword=邯郸遇害初中生已于18日凌晨尸检)
-1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
-1. [普京称将在新任期继续推动国家发展](https://so.toutiao.com/search?keyword=普京称将在新任期继续推动国家发展)
-1. [小伙供女友读研 婚前查出白血病](https://so.toutiao.com/search?keyword=小伙供女友读研+婚前查出白血病)
-1. [多家厂商否认淀粉肠使用骨泥](https://so.toutiao.com/search?keyword=多家厂商否认淀粉肠使用骨泥)
-1. [女子加盟奶茶店半年亏60多万](https://so.toutiao.com/search?keyword=女子加盟奶茶店半年亏60多万)
-1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
-1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
+1. [邯郸遇害男生遭霸凌后曾和同学说想死](https://so.toutiao.com/search?keyword=邯郸遇害男生遭霸凌后曾和同学说想死)
 1. [315后山姆和Costco生意会更好吗](https://so.toutiao.com/search?keyword=315后山姆和Costco生意会更好吗)
-1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
-1. [媒体：樊振东看演唱会有何不可](https://so.toutiao.com/search?keyword=媒体：樊振东看演唱会有何不可)
-1. [凯特王妃去向不明 各方回应引猜测](https://so.toutiao.com/search?keyword=凯特王妃去向不明+各方回应引猜测)
-1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
-1. [三岁半孙子每天给开公交的爷爷送饭](https://so.toutiao.com/search?keyword=三岁半孙子每天给开公交的爷爷送饭)
-1. [辽宁省军区原司令员向经源逝世](https://so.toutiao.com/search?keyword=辽宁省军区原司令员向经源逝世)
-1. [伊万科维奇发现国足弊病](https://so.toutiao.com/search?keyword=伊万科维奇发现国足弊病)
-1. [国内油价调整大概率搁浅](https://so.toutiao.com/search?keyword=国内油价调整大概率搁浅)
-1. [布伦森谈欧文绝杀：这球也太难了吧](https://so.toutiao.com/search?keyword=布伦森谈欧文绝杀：这球也太难了吧)
-1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
 1. [普京将如何带领俄罗斯迎接硬核挑战](https://so.toutiao.com/search?keyword=普京将如何带领俄罗斯迎接硬核挑战)
-1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
-1. [两金门人员出海失联被大陆船只救起](https://so.toutiao.com/search?keyword=两金门人员出海失联被大陆船只救起)
-1. [联合国批俄在乌东等地举行大选投票](https://so.toutiao.com/search?keyword=联合国批俄在乌东等地举行大选投票)
-1. [男子获理赔后又将病死牛挖出来卖](https://so.toutiao.com/search?keyword=男子获理赔后又将病死牛挖出来卖)
+1. [女子加盟奶茶店半年亏60多万](https://so.toutiao.com/search?keyword=女子加盟奶茶店半年亏60多万)
+1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
+1. [普京回应会否与北约爆发全面冲突](https://so.toutiao.com/search?keyword=普京回应会否与北约爆发全面冲突)
 1. [火星哥因赌博欠债5000万美元](https://so.toutiao.com/search?keyword=火星哥因赌博欠债5000万美元)
-1. [百度副总裁：我们比华为智驾领先](https://so.toutiao.com/search?keyword=百度副总裁：我们比华为智驾领先)
-1. [特朗普：泽连斯基是最伟大的推销员](https://so.toutiao.com/search?keyword=特朗普：泽连斯基是最伟大的推销员)
-1. [辛吉飞去看市场里的梅菜扣肉](https://so.toutiao.com/search?keyword=辛吉飞去看市场里的梅菜扣肉)
-1. [法媒：马克龙为何从鸽派变为鹰派](https://so.toutiao.com/search?keyword=法媒：马克龙为何从鸽派变为鹰派)
-1. [俄罗斯英雄猫用尾巴挡弹片救主人](https://so.toutiao.com/search?keyword=俄罗斯英雄猫用尾巴挡弹片救主人)
-1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
-1. [货车超载500%以上 蛇形走位后侧翻](https://so.toutiao.com/search?keyword=货车超载500%以上+蛇形走位后侧翻)
-1. [特朗普：我败选对美来说是大屠杀](https://so.toutiao.com/search?keyword=特朗普：我败选对美来说是大屠杀)
-1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
-1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
-1. [雅江山火威胁加油站 消防连夜增湿](https://so.toutiao.com/search?keyword=雅江山火威胁加油站+消防连夜增湿)
+1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
+1. [男子获理赔后又将病死牛挖出来卖](https://so.toutiao.com/search?keyword=男子获理赔后又将病死牛挖出来卖)
+1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
+1. [比亚迪护卫舰07荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪护卫舰07荣耀版上市)
+1. [多家厂商否认淀粉肠使用骨泥](https://so.toutiao.com/search?keyword=多家厂商否认淀粉肠使用骨泥)
+1. [小伙供女友读研 婚前查出白血病](https://so.toutiao.com/search?keyword=小伙供女友读研+婚前查出白血病)
+1. [伊万科维奇发现国足弊病](https://so.toutiao.com/search?keyword=伊万科维奇发现国足弊病)
+1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
+1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
+1. [普京称将在新任期继续推动国家发展](https://so.toutiao.com/search?keyword=普京称将在新任期继续推动国家发展)
+1. [天水会复制哈尔滨的成功吗](https://so.toutiao.com/search?keyword=天水会复制哈尔滨的成功吗)
 1. [高盛预计日本央行将于本周升息](https://so.toutiao.com/search?keyword=高盛预计日本央行将于本周升息)
+1. [凯特王妃去向不明 各方回应引猜测](https://so.toutiao.com/search?keyword=凯特王妃去向不明+各方回应引猜测)
+1. [特朗普：泽连斯基是最伟大的推销员](https://so.toutiao.com/search?keyword=特朗普：泽连斯基是最伟大的推销员)
+1. [三岁半孙子每天给开公交的爷爷送饭](https://so.toutiao.com/search?keyword=三岁半孙子每天给开公交的爷爷送饭)
 1. [淀粉肠摊主称周围同行只剩一两家](https://so.toutiao.com/search?keyword=淀粉肠摊主称周围同行只剩一两家)
-1. [为何南方城市对人才更有吸引力](https://so.toutiao.com/search?keyword=为何南方城市对人才更有吸引力)
-1. [撒贝宁带龙凤胎出行](https://so.toutiao.com/search?keyword=撒贝宁带龙凤胎出行)
+1. [卡桑旅公布追踪及狙杀以军官画面](https://so.toutiao.com/search?keyword=卡桑旅公布追踪及狙杀以军官画面)
+1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
+1. [媒体：樊振东看演唱会有何不可](https://so.toutiao.com/search?keyword=媒体：樊振东看演唱会有何不可)
+1. [美媒：众议员“离职潮”冲击美国会](https://so.toutiao.com/search?keyword=美媒：众议员“离职潮”冲击美国会)
 1. [央媒评淀粉肠塌房](https://so.toutiao.com/search?keyword=央媒评淀粉肠塌房)
+1. [国内油价调整大概率搁浅](https://so.toutiao.com/search?keyword=国内油价调整大概率搁浅)
+1. [百度副总裁：我们比华为智驾领先](https://so.toutiao.com/search?keyword=百度副总裁：我们比华为智驾领先)
+1. [撒贝宁带龙凤胎出行](https://so.toutiao.com/search?keyword=撒贝宁带龙凤胎出行)
+1. [辽宁省军区原司令员向经源逝世](https://so.toutiao.com/search?keyword=辽宁省军区原司令员向经源逝世)
+1. [特朗普：我败选对美来说是大屠杀](https://so.toutiao.com/search?keyword=特朗普：我败选对美来说是大屠杀)
+1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
+1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
+1. [北约士兵现乌战场？普京强硬表态](https://so.toutiao.com/search?keyword=北约士兵现乌战场？普京强硬表态)
+1. [辛吉飞去看市场里的梅菜扣肉](https://so.toutiao.com/search?keyword=辛吉飞去看市场里的梅菜扣肉)
+1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
+1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
+1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
+1. [法媒：马克龙为何从鸽派变为鹰派](https://so.toutiao.com/search?keyword=法媒：马克龙为何从鸽派变为鹰派)
+1. [驻港公署正告美方停止干预23条立法](https://so.toutiao.com/search?keyword=驻港公署正告美方停止干预23条立法)
+1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
+1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
+1. [男子景区写日本国歌4字引游客怒斥](https://so.toutiao.com/search?keyword=男子景区写日本国歌4字引游客怒斥)
+1. [两金门人员出海失联被大陆船只救起](https://so.toutiao.com/search?keyword=两金门人员出海失联被大陆船只救起)
+1. [穿越花海奔赴一场春天的约会](https://so.toutiao.com/search?keyword=穿越花海奔赴一场春天的约会)
+1. [邯郸遇害初中生已于18日凌晨尸检](https://so.toutiao.com/search?keyword=邯郸遇害初中生已于18日凌晨尸检)
+1. [布伦森谈欧文绝杀：这球也太难了吧](https://so.toutiao.com/search?keyword=布伦森谈欧文绝杀：这球也太难了吧)
+1. [联合国批俄在乌东等地举行大选投票](https://so.toutiao.com/search?keyword=联合国批俄在乌东等地举行大选投票)
+1. [俄罗斯英雄猫用尾巴挡弹片救主人](https://so.toutiao.com/search?keyword=俄罗斯英雄猫用尾巴挡弹片救主人)
+1. [货车超载500%以上 蛇形走位后侧翻](https://so.toutiao.com/search?keyword=货车超载500%以上+蛇形走位后侧翻)
+1. [雅江山火威胁加油站 消防连夜增湿](https://so.toutiao.com/search?keyword=雅江山火威胁加油站+消防连夜增湿)
+1. [为何南方城市对人才更有吸引力](https://so.toutiao.com/search?keyword=为何南方城市对人才更有吸引力)
 1. [俄总统普京感谢选民支持](https://so.toutiao.com/search?keyword=俄总统普京感谢选民支持)
 1. [内蒙古一公安局副局长因公牺牲](https://so.toutiao.com/search?keyword=内蒙古一公安局副局长因公牺牲)
 1. [秸秆为何不能露天烧](https://so.toutiao.com/search?keyword=秸秆为何不能露天烧)
-1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
 1. [媒体人：曾凡博迟迟无法兑换天赋](https://so.toutiao.com/search?keyword=媒体人：曾凡博迟迟无法兑换天赋)
 1. [初中生杀人案家长学校承担什么责任](https://so.toutiao.com/search?keyword=初中生杀人案家长学校承担什么责任)
 1. [利拉德31分 雄鹿主场战胜太阳](https://so.toutiao.com/search?keyword=利拉德31分+雄鹿主场战胜太阳)
@@ -63,17 +75,14 @@
 1. [俄防长要求黑海舰队加强保护](https://so.toutiao.com/search?keyword=俄防长要求黑海舰队加强保护)
 1. [新冠感染与认知功能下降存在相关性](https://so.toutiao.com/search?keyword=新冠感染与认知功能下降存在相关性)
 1. [男子网购彩票中千万大奖案一审宣判](https://so.toutiao.com/search?keyword=男子网购彩票中千万大奖案一审宣判)
-1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
 1. [网传邯郸初中生遇害案颅骨照片不实](https://so.toutiao.com/search?keyword=网传邯郸初中生遇害案颅骨照片不实)
 1. [4男女混租3个月后留满屋垃圾](https://so.toutiao.com/search?keyword=4男女混租3个月后留满屋垃圾)
-1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
 1. [用劣质槽头肉企业负责人道歉](https://so.toutiao.com/search?keyword=用劣质槽头肉企业负责人道歉)
 1. [315后阜阳市委市政府连夜开专题会](https://so.toutiao.com/search?keyword=315后阜阳市委市政府连夜开专题会)
 1. [专家：贵州“金字塔”是自然形成](https://so.toutiao.com/search?keyword=专家：贵州“金字塔”是自然形成)
 1. [今年高校毕业生将超1170万人](https://so.toutiao.com/search?keyword=今年高校毕业生将超1170万人)
 1. [台退将谈美国特种部队常驻台湾传闻](https://so.toutiao.com/search?keyword=台退将谈美国特种部队常驻台湾传闻)
 1. [修图风波后威廉王子首谈凯特王妃](https://so.toutiao.com/search?keyword=修图风波后威廉王子首谈凯特王妃)
-1. [男子景区写日本国歌4字引游客怒斥](https://so.toutiao.com/search?keyword=男子景区写日本国歌4字引游客怒斥)
 1. [王曼昱夺WTT新加坡大满贯女单冠军](https://so.toutiao.com/search?keyword=王曼昱夺WTT新加坡大满贯女单冠军)
 1. [欧文压哨绝杀 独行侠主场险胜掘金](https://so.toutiao.com/search?keyword=欧文压哨绝杀+独行侠主场险胜掘金)
 1. [女孩一把将小男孩从高处推下](https://so.toutiao.com/search?keyword=女孩一把将小男孩从高处推下)
