--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,57 +1,79 @@
 # 2024-03-18
 
-共 144 条
+共 165 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 11:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 18 2024 12:00:36 GMT+0800 (China Standard Time) -->
 1. [普京当选俄总统](https://so.toutiao.com/search?keyword=普京当选俄总统)
-1. [13岁男生猥亵女生被送专门学校训诫](https://so.toutiao.com/search?keyword=13岁男生猥亵女生被送专门学校训诫)
+1. [淀粉肠摊主一晚0收入](https://so.toutiao.com/search?keyword=淀粉肠摊主一晚0收入)
 1. [春分将至农事忙](https://so.toutiao.com/search?keyword=春分将至农事忙)
 1. [普京胜选后谈中俄关系](https://so.toutiao.com/search?keyword=普京胜选后谈中俄关系)
-1. [邯郸遇害男生遭霸凌后曾和同学说想死](https://so.toutiao.com/search?keyword=邯郸遇害男生遭霸凌后曾和同学说想死)
+1. [13岁男生猥亵女生被送专门学校训诫](https://so.toutiao.com/search?keyword=13岁男生猥亵女生被送专门学校训诫)
 1. [315后山姆和Costco生意会更好吗](https://so.toutiao.com/search?keyword=315后山姆和Costco生意会更好吗)
-1. [普京将如何带领俄罗斯迎接硬核挑战](https://so.toutiao.com/search?keyword=普京将如何带领俄罗斯迎接硬核挑战)
-1. [女子加盟奶茶店半年亏60多万](https://so.toutiao.com/search?keyword=女子加盟奶茶店半年亏60多万)
-1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
-1. [普京回应会否与北约爆发全面冲突](https://so.toutiao.com/search?keyword=普京回应会否与北约爆发全面冲突)
-1. [火星哥因赌博欠债5000万美元](https://so.toutiao.com/search?keyword=火星哥因赌博欠债5000万美元)
-1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
-1. [男子获理赔后又将病死牛挖出来卖](https://so.toutiao.com/search?keyword=男子获理赔后又将病死牛挖出来卖)
-1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
-1. [比亚迪护卫舰07荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪护卫舰07荣耀版上市)
-1. [多家厂商否认淀粉肠使用骨泥](https://so.toutiao.com/search?keyword=多家厂商否认淀粉肠使用骨泥)
-1. [小伙供女友读研 婚前查出白血病](https://so.toutiao.com/search?keyword=小伙供女友读研+婚前查出白血病)
+1. [非洲男子自称是马斯克私生子](https://so.toutiao.com/search?keyword=非洲男子自称是马斯克私生子)
+1. [日本贫富差距小如何让老百姓都有钱](https://so.toutiao.com/search?keyword=日本贫富差距小如何让老百姓都有钱)
 1. [伊万科维奇发现国足弊病](https://so.toutiao.com/search?keyword=伊万科维奇发现国足弊病)
-1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
-1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
-1. [普京称将在新任期继续推动国家发展](https://so.toutiao.com/search?keyword=普京称将在新任期继续推动国家发展)
-1. [天水会复制哈尔滨的成功吗](https://so.toutiao.com/search?keyword=天水会复制哈尔滨的成功吗)
-1. [高盛预计日本央行将于本周升息](https://so.toutiao.com/search?keyword=高盛预计日本央行将于本周升息)
+1. [普京回应会否与北约爆发全面冲突](https://so.toutiao.com/search?keyword=普京回应会否与北约爆发全面冲突)
+1. [官方通报初中生被同学杀害：将惩处](https://so.toutiao.com/search?keyword=官方通报初中生被同学杀害：将惩处)
+1. [火星哥因赌博欠债5000万美元](https://so.toutiao.com/search?keyword=火星哥因赌博欠债5000万美元)
+1. [每做一次CT患癌风险增加43%？假的](https://so.toutiao.com/search?keyword=每做一次CT患癌风险增加43%？假的)
+1. [以军空袭加沙中部致36人死亡](https://so.toutiao.com/search?keyword=以军空袭加沙中部致36人死亡)
+1. [普京首度回应纳瓦利内之死](https://so.toutiao.com/search?keyword=普京首度回应纳瓦利内之死)
+1. [猫妈产下“双头猫”天生长有两张脸](https://so.toutiao.com/search?keyword=猫妈产下“双头猫”天生长有两张脸)
+1. [街头实拍新能源汽车自燃现场](https://so.toutiao.com/search?keyword=街头实拍新能源汽车自燃现场)
+1. [比亚迪护卫舰07荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪护卫舰07荣耀版上市)
+1. [男子酒店热水壶烧水喝完发现避孕套](https://so.toutiao.com/search?keyword=男子酒店热水壶烧水喝完发现避孕套)
+1. [胖东来招聘年薪最高15万](https://so.toutiao.com/search?keyword=胖东来招聘年薪最高15万)
+1. [辽宁省军区原司令员向经源逝世](https://so.toutiao.com/search?keyword=辽宁省军区原司令员向经源逝世)
 1. [凯特王妃去向不明 各方回应引猜测](https://so.toutiao.com/search?keyword=凯特王妃去向不明+各方回应引猜测)
+1. [SpaceX与美情报机构合作意味着什么](https://so.toutiao.com/search?keyword=SpaceX与美情报机构合作意味着什么)
+1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
+1. [多家厂商否认淀粉肠使用骨泥](https://so.toutiao.com/search?keyword=多家厂商否认淀粉肠使用骨泥)
+1. [男子获理赔后又将病死牛挖出来卖](https://so.toutiao.com/search?keyword=男子获理赔后又将病死牛挖出来卖)
+1. [百度副总裁：我们比华为智驾领先](https://so.toutiao.com/search?keyword=百度副总裁：我们比华为智驾领先)
+1. [王楚钦王曼昱被烟花吓出表情包](https://so.toutiao.com/search?keyword=王楚钦王曼昱被烟花吓出表情包)
+1. [小伙供女友读研 婚前查出白血病](https://so.toutiao.com/search?keyword=小伙供女友读研+婚前查出白血病)
+1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
+1. [德甲赛季开局不败榜：拜仁28场居首](https://so.toutiao.com/search?keyword=德甲赛季开局不败榜：拜仁28场居首)
+1. [游客称去天水吃麻辣烫被送网送饮料](https://so.toutiao.com/search?keyword=游客称去天水吃麻辣烫被送网送饮料)
+1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
+1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
+1. [女子加盟奶茶店半年亏60多万](https://so.toutiao.com/search?keyword=女子加盟奶茶店半年亏60多万)
+1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
+1. [俄方回应近期俄边境频繁遭袭](https://so.toutiao.com/search?keyword=俄方回应近期俄边境频繁遭袭)
+1. [军医教你如何养肝护肝](https://so.toutiao.com/search?keyword=军医教你如何养肝护肝)
+1. [天水会复制哈尔滨的成功吗](https://so.toutiao.com/search?keyword=天水会复制哈尔滨的成功吗)
+1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
+1. [北约士兵现乌战场？普京强硬表态](https://so.toutiao.com/search?keyword=北约士兵现乌战场？普京强硬表态)
+1. [楼市“小阳春”冷热不均](https://so.toutiao.com/search?keyword=楼市“小阳春”冷热不均)
+1. [哈维宣布离任后巴萨7胜3平](https://so.toutiao.com/search?keyword=哈维宣布离任后巴萨7胜3平)
+1. [阿隆索执教勒沃库森75场取50胜](https://so.toutiao.com/search?keyword=阿隆索执教勒沃库森75场取50胜)
+1. [OMG中单Angel父亲去世](https://so.toutiao.com/search?keyword=OMG中单Angel父亲去世)
+1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
+1. [美取消房产交易6%佣金或致房价下跌](https://so.toutiao.com/search?keyword=美取消房产交易6%佣金或致房价下跌)
+1. [普京将如何带领俄罗斯迎接硬核挑战](https://so.toutiao.com/search?keyword=普京将如何带领俄罗斯迎接硬核挑战)
+1. [翟晓川：输球不能怪曾凡博和雷蒙](https://so.toutiao.com/search?keyword=翟晓川：输球不能怪曾凡博和雷蒙)
+1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
+1. [邯郸遇害男生遭霸凌后曾和同学说想死](https://so.toutiao.com/search?keyword=邯郸遇害男生遭霸凌后曾和同学说想死)
+1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
+1. [普京称将在新任期继续推动国家发展](https://so.toutiao.com/search?keyword=普京称将在新任期继续推动国家发展)
+1. [高盛预计日本央行将于本周升息](https://so.toutiao.com/search?keyword=高盛预计日本央行将于本周升息)
 1. [特朗普：泽连斯基是最伟大的推销员](https://so.toutiao.com/search?keyword=特朗普：泽连斯基是最伟大的推销员)
 1. [三岁半孙子每天给开公交的爷爷送饭](https://so.toutiao.com/search?keyword=三岁半孙子每天给开公交的爷爷送饭)
 1. [淀粉肠摊主称周围同行只剩一两家](https://so.toutiao.com/search?keyword=淀粉肠摊主称周围同行只剩一两家)
 1. [卡桑旅公布追踪及狙杀以军官画面](https://so.toutiao.com/search?keyword=卡桑旅公布追踪及狙杀以军官画面)
-1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
 1. [媒体：樊振东看演唱会有何不可](https://so.toutiao.com/search?keyword=媒体：樊振东看演唱会有何不可)
 1. [美媒：众议员“离职潮”冲击美国会](https://so.toutiao.com/search?keyword=美媒：众议员“离职潮”冲击美国会)
 1. [央媒评淀粉肠塌房](https://so.toutiao.com/search?keyword=央媒评淀粉肠塌房)
 1. [国内油价调整大概率搁浅](https://so.toutiao.com/search?keyword=国内油价调整大概率搁浅)
-1. [百度副总裁：我们比华为智驾领先](https://so.toutiao.com/search?keyword=百度副总裁：我们比华为智驾领先)
 1. [撒贝宁带龙凤胎出行](https://so.toutiao.com/search?keyword=撒贝宁带龙凤胎出行)
-1. [辽宁省军区原司令员向经源逝世](https://so.toutiao.com/search?keyword=辽宁省军区原司令员向经源逝世)
 1. [特朗普：我败选对美来说是大屠杀](https://so.toutiao.com/search?keyword=特朗普：我败选对美来说是大屠杀)
-1. [听花酒母公司青海春天跌停](https://so.toutiao.com/search?keyword=听花酒母公司青海春天跌停)
 1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
-1. [北约士兵现乌战场？普京强硬表态](https://so.toutiao.com/search?keyword=北约士兵现乌战场？普京强硬表态)
 1. [辛吉飞去看市场里的梅菜扣肉](https://so.toutiao.com/search?keyword=辛吉飞去看市场里的梅菜扣肉)
 1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
-1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
 1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
 1. [法媒：马克龙为何从鸽派变为鹰派](https://so.toutiao.com/search?keyword=法媒：马克龙为何从鸽派变为鹰派)
 1. [驻港公署正告美方停止干预23条立法](https://so.toutiao.com/search?keyword=驻港公署正告美方停止干预23条立法)
-1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
-1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
 1. [男子景区写日本国歌4字引游客怒斥](https://so.toutiao.com/search?keyword=男子景区写日本国歌4字引游客怒斥)
 1. [两金门人员出海失联被大陆船只救起](https://so.toutiao.com/search?keyword=两金门人员出海失联被大陆船只救起)
 1. [穿越花海奔赴一场春天的约会](https://so.toutiao.com/search?keyword=穿越花海奔赴一场春天的约会)
@@ -97,7 +119,6 @@
 1. [俄总统选举投票率已过半](https://so.toutiao.com/search?keyword=俄总统选举投票率已过半)
 1. [前联合国官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=前联合国官员称从小被教育要憎恨中国)
 1. [被害男生父亲怀疑杀人埋尸有帮凶](https://so.toutiao.com/search?keyword=被害男生父亲怀疑杀人埋尸有帮凶)
-1. [官方通报初中生被同学杀害：将惩处](https://so.toutiao.com/search?keyword=官方通报初中生被同学杀害：将惩处)
 1. [遇害男孩家属：孩子经常要钱才上学](https://so.toutiao.com/search?keyword=遇害男孩家属：孩子经常要钱才上学)
 1. [美国男子水下生活百天生理年龄减少](https://so.toutiao.com/search?keyword=美国男子水下生活百天生理年龄减少)
 1. [邯郸村民试挖坑：6小时只能挖1米深](https://so.toutiao.com/search?keyword=邯郸村民试挖坑：6小时只能挖1米深)
